--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -9,10 +9,10 @@ spec:
         generators:
           # git generator, 'child' #1
           - git:
-              repoURL: https://github.com/argoproj/argo-cd.git
+              repoURL: https://github.com/arpita-aa/gitops-cert-level-2-examples
               revision: HEAD
               directories:
-                - path: applicationset/examples/matrix/cluster-addons/*
+                - path: application-sets/example-apps/*
           # cluster generator, 'child' #2
           - clusters:
               selector:
@@ -22,11 +22,16 @@ spec:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
-      project: '{{metadata.labels.environment}}'
+      project: default
       source:
-        repoURL: https://github.com/argoproj/argo-cd.git
+        repoURL: https://github.com/arpita-aa/gitops-cert-level-2-examples
         targetRevision: HEAD
         path: '{{path}}'
       destination:
         server: '{{server}}'
         namespace: '{{path.basename}}'
+      syncPolicy:
+        syncOptions:
+        - createNamespace: true
+        automated:
+          selfHeal: true
