--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -32,6 +32,6 @@ spec:
         namespace: '{{path.basename}}'
       syncPolicy:
         syncOptions:
-        - createNamespace: true
+        - CreateNamespace=true
         automated:
           selfHeal: true
