--- a/environment-promotion/my-app-set/simple.yaml
+++ b/environment-promotion/my-app-set/simple.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: argocd
 spec:
     generators:
-        list:
+        - list:
             elements:
             - env:  qa
             - env: staging
