--- a/environment-promotion/my-app-set/simple.yaml
+++ b/environment-promotion/my-app-set/simple.yaml
@@ -1,32 +1,28 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-    name: simple
-    namespace: argocd
+  name: simple
 spec:
-    generators:
-        - list:
-            elements:
-            - env:  qa
-            - env: staging
-            - env: prod
-    template:
-        metadata:
-            name: {{env}}
-            namespace: argocd
-        spec:
-            project: default
-            source:
-                repoURL: https://github.com/arpita-aa/gitops-cert-level-2-examples
-                path: ./environment-promotion/envs/{{env}}
-                targetRevision: HEAD
-            destination:
-                server: https://kubernetes.default.svc
-                namespace: {{env}}
-            syncPolicy:
-                syncOptions:
-                - CreateNamespace=true
-                automated:
-                    selfHeal: true
-
-
+  generators:
+  - list:
+      elements:
+      - env: qa
+      - env: staging
+      - env: prod
+  template:
+    metadata:
+      name: '{{env}}'
+    spec:
+      project: default
+      source:
+        repoURL: https://github.com/arpita-aa/gitops-cert-level-2-examples
+        targetRevision: HEAD
+        path: environment-promotion/envs/{{env}}
+      destination:
+        server: https://kubernetes.default.svc
+        namespace: {{env}}
+	 syncPolicy:
+        syncOptions:
+        - CreateNamespace=true
+        automated:
+          selfHeal: true
