--- a/environment-promotion/my-app-set/simple.yaml
+++ b/environment-promotion/my-app-set/simple.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: simple
+  namespace: argocd
 spec:
   generators:
   - list:
@@ -15,12 +16,12 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://github.com/arpita-aa/gitops-cert-level-2-examples
+        repoURL: https://github.com/arpita-aa/gitops-cert-level-2-examples.git
         targetRevision: HEAD
-        path: environment-promotion/envs/{{env}}
+        path: ./environment-promotion/envs/{{env}}
       destination:
         server: https://kubernetes.default.svc
-        namespace: {{env}}
+        namespace: '{{env}}'
       syncPolicy:
         syncOptions:
         - CreateNamespace=true
