--- a/custom-diff/applications/with-hpa.yml
+++ b/custom-diff/applications/with-hpa.yml
@@ -22,7 +22,7 @@ spec:
     syncOptions:
       - CreateNamespace=true
   ignoreDifferences:
-    group: apps
+  - group: apps
     kind: Deployment
     jsonPointers:
     - /spec/replicas
